--- a/item1.html
+++ b/item1.html
@@ -36,7 +36,7 @@
     </div>
 
 <h1>Description :</h1>
-<p>Une couverture qui saura vous garder au chaud, peu importe la température, elle sera là pour vous. Vous avec uniquement besoin de cette grosse laine, plus besoin des inconvéniants d'une relation pour se garder au chaud.</p>
+<p>Une couverture qui saura vous garder au chaud, peu importe la température, elle sera là pour vous. Vous avez uniquement besoin de cette grosse laine, plus besoin des inconvéniants d'une relation pour se garder au chaud.</p>
 
 
 </div>
